--- a/index.html
+++ b/index.html
@@ -54,17 +54,14 @@
           <div class="column has-text-centered">
             <h1 class="title is-1 publication-title">CellularLint: A Systematic Approach to Identify Inconsistent Behavior in Cellular Network Specifications</h1>
             <div class="is-size-5 publication-authors">
-              <!-- Paper authors -->
-              <!-- <span class="author-block">
+              <-- Paper authors -->
+              <-- <span class="author-block">
                 <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">Mirza Masfiqur Rahman</a><sup>*</sup>,</span>
                 <span class="author-block">
                   <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Imtiaz Karim</a><sup>*</sup>,</span>
                   <span class="author-block">
                     <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Elisa Bertino</a>
                   </span> -->
-                  <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Anonymous Authors</a>
-                  </span>
                   </div>
 
                   <!-- <div class="is-size-5 publication-authors">
