Working on the website

--- a/index.html
+++ b/index.html
@@ -54,18 +54,17 @@
           <div class="column has-text-centered">
             <h1 class="title is-1 publication-title">CellularLint: A Systematic Approach to Identify Inconsistent Behavior in Cellular Network Specifications</h1>
             <div class="is-size-5 publication-authors">
-              <-- Paper authors -->
-              <-- <span class="author-block">
-                <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">Mirza Masfiqur Rahman</a><sup>*</sup>,</span>
+             
+              <span class="author-block">
+                <a href="https://www.mirzamr.net/" target="_blank">Mirza Masfiqur Rahman</a><sup>*</sup>,</span>
                 <span class="author-block">
-                  <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Imtiaz Karim</a><sup>*</sup>,</span>
+                  <a href="https://www.imtiazkarim.net/" target="_blank">Imtiaz Karim</a><sup>*</sup>,</span>
                   <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Elisa Bertino</a>
+                    <a href="https://www.cs.purdue.edu/homes/bertino/" target="_blank">Elisa Bertino</a>
                   </span> -->
                   </div>
-
-                  <!-- <div class="is-size-5 publication-authors">
-                    <span class="author-block">Institution Name<br>USENIX Security</span>
+                  <-- <div class="is-size-5 publication-authors">
+                    <span class="author-block">Institution Name<br>Purdue University</span>
                     <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span>
                   </div> -->
 
