--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
                   <a href="https://www.imtiazkarim.net/" target="_blank">Imtiaz Karim</a><sup>*</sup>,</span>
                   <span class="author-block">
                     <a href="https://www.cs.purdue.edu/homes/bertino/" target="_blank">Elisa Bertino</a>
-                  </span> -->
+                  </span> 
                   </div>
-                  <-- <div class="is-size-5 publication-authors">
+                  <div class="is-size-5 publication-authors">
                     <span class="author-block">Institution Name<br>Purdue University</span>
                     <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span>
-                  </div> -->
+                  </div> 
 
                   <div class="column has-text-centered">
                     <div class="publication-links">
