--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                   </div>
                   <div class="is-size-5 publication-authors">
                     <span class="author-block">Purdue University</span>
-                    <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span>
+                    <span class="eql-cntrb"><small><br><sup>*</sup>Equal contribution. The student author's name is given first.</small></span>
                   </div> 
 
                   <div class="column has-text-centered">
