--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         <span class="icon">
                           <i class="fas fa-file-pdf"></i>
                         </span>
-                        <span>Paper</span>
+                        <span>Paper Link</span>
                       </a>
                     </span>
 
