--- a/index.html
+++ b/index.html
@@ -272,7 +272,15 @@
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
-      <pre><code>BibTex Code Here</code></pre>
+      <pre><code>@misc{rahman2024cellularlintsystematicapproachidentify,
+      title={CellularLint: A Systematic Approach to Identify Inconsistent Behavior in Cellular Network Specifications}, 
+      author={Mirza Masfiqur Rahman and Imtiaz Karim and Elisa Bertino},
+      year={2024},
+      eprint={2407.13742},
+      archivePrefix={arXiv},
+      primaryClass={cs.CR},
+      url={https://arxiv.org/abs/2407.13742}, 
+}</code></pre>
     </div>
 </section>
 <!--End BibTex citation -->
