--- a/index.html
+++ b/index.html
@@ -160,6 +160,29 @@
 </section>
 <!-- End paper abstract -->
 
+<!-- NAS Message Ciphering -->
+<section class="section hero is-light">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+        <h2 class="title is-3">NAS Message Ciphering</h2>
+        <div class="content has-text-justified">
+          <p>
+            Finding 1. NAS message ciphering. After the completion of security mode procedures, 
+            the specifications suggest that, except for a few messages, all messages should be integrity 
+            protected and ciphered. However, on two occasions (shown in Figure 6), it is emphasized that 
+            all messages after the security procedure should be integrity-protected and ciphered. Failure 
+            to enforce integrity and ciphering is a serious design flaw 
+            and can leave implementations subject to vulnerabilities and 
+            interoperability issues.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- End NAS Message Ciphering -->
+
 
 <!-- Image carousel -->
 <!-- <section class="hero is-small">
